tests/fixtures/invalid/min_list_set.py
# Cannot call min() with List[int], Set[int]
x = min([1, 2, 3], {1, 2, 3})
